fixed spacing on about, finished join page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -511,4 +511,10 @@ footer {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    h4 {
+        font-size: 18px;
+    }
+    p {
+        font-size: 14px;
+    }
 }
